[package]
name = "will-serv"
version = "0.5.0"
authors = ["wrobinson <will@williamjamesrobinson.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.0"
chrono = "0.4.19"
log = "0.4.14"
env_logger = "0.8.3"

[profile.release]
debug = true

[target.armv7-unknown-linux-gnueabihf]
linker = "arm-none-linux-gnueabihf-gcc"
# Need to set env var CARGO_TARGET_ARMV7_UNKNOWN_LINUX_GNUEABIHF_LINKER=/usr/bin/arm-linux-gnueabihf-gcc